[tool.poetry]
name = "gbf_caching_proxy"
version = "0.1.0"
description = ""
authors = ["v.paritskiy <v.paritskiy@code-on.be>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
xxhash = "^3.0.0"
starlette = "^0.20.4"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
